# Lhayum_alpha

./: README.md  TibetanQA.xlsx  lib_client.py  main.py  notebook.ipynb  pyproject.toml  rag_system.py  rag_systems.py  tibetan-chatbot.ogv
